syntax = "proto3";
import "commit.proto";
import "branch.proto";

message WorkSpace {
    Branch parent = 1;
    repeated Commit commits = 2;
    string originCommit = 3;
}
